# Project210425

./: 01_dataset.py  02_matrix.py  03_face_recognition.py  04_database.py  05_telegram_bot.py  camera_check.py  camera_check2.py  camera_id.py  database_people.db  final_test.py  news.yaml  old_schedule.yaml  pygame-test.py  pyproject.toml  schedule.yaml
gaze_tracking/: 05_telegram_bot.py  database_people.db
gaze_tracking/Новая папка/: database_people.db
